--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
         <div class="absolute bottom-0 left-0 w-64 h-64 bg-accent rounded-full filter blur-3xl opacity-20 -z-10"></div>
     </section>
 
-    <section class="py-20 max-w-7xl mx-auto">
+     <section class="py-20 max-w-7xl mx-auto">
         <div class="container mx-auto bg-[#000000] py-14 px-10 rounded-2xl">
-          <div class="flex flex-col-reverse lg:flex-row items-center gap-15">
+          <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-15">
             <!-- Texto -->
             <div class="w-full lg:w-1/2 space-y-10 p-4">
               <h2 class="max-w-3xl mx-auto text-gray-200 text-4xl md:text-5xl leading-tight font-bold uppercase mb-5">
